src/test/ui/chalkify/impl_wf.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/impl_wf.rs:11:6
   |
LL | impl Foo for str { }
   |      ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Foo`
  --> $DIR/impl_wf.rs:3:12
   |
LL | trait Foo: Sized { }
   |            ^^^^^ required by this bound in `Foo`

error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/impl_wf.rs:22:6
   |
LL | impl Baz<f32> for f32 { }
   |      ^^^^^^^^ the trait `Foo` is not implemented for `f32`
   |
   = help: the following implementations were found:
             <i32 as Foo>
note: required by a bound in `Baz`
  --> $DIR/impl_wf.rs:18:31
   |
LL | trait Baz<U: ?Sized> where U: Foo { }
   |                               ^^^ required by this bound in `Baz`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
